# Onigiri

./: .gitignore  README.md  onigiri.code-workspace  pyproject.toml
app/: .pylintrc  Dockerfile  README.md  invoke.sh  main.py  pyproject.toml
app/src/: main.py
app/src/api/dependencies/: __init__.py
app/src/api/models/: __init__.py  chat.py  login.py  message.py
app/src/api/services/: onigiri_agent.py
app/src/core/llm/: __init__.py  client.py  config.py  credentials_provider.py  prompts.py  service.py
app/src/core/services/: accounts.py
app/src/db/: __init__.py  models.py
app/src/models/: __init__.py
app/tests/: pytest.ini  test_main.py
app/tests/integration/: test_routes.py
app/tests/unit/: test_core_llm.py
ui/: README.md
ui/bubble/: package-lock.json  package.json
ui/bubble/src/routes/waitlist/: +page.svelte
ui/chat page uix/: index.html  style.css
ui/coming_soon/: index.html
ui/desktop sign in/: index.html  style.css
ui/login/: index.html  main.js
ui/misc/chat/: index.html  script.js  styles.css
ui/misc/coming_soon/: index.html
ui/misc/login/: style.css
ui/phone ui sign in/: index.html  style.css
