[tool.poetry]
name = "onigiri"
version = "0.1.0"
description = "A smart HR chat app that answers your queries fro mexisting knowledgebase or uploaded documents"
authors = ["Your Name <you@example.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
langchain = "^0.0.234"
openai = "^0.27.8"
tiktoken = "^0.4.0"
sqlmodel = "^0.0.8"
pydantic = {version = "1.10.11", extras = ["email"]}


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.0"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
isort = "^5.12.0"
black = "^23.3.0"
httpx = "^0.24.1"
pytest-env = "^0.8.2"
requests = "^2.31.0"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
